# filestripper

./: CMakeLists.txt  cmake-script.sh  filesplitter.sh  filestripper.cpp  filestripper.sh  filestripperNEW.sh  filestripperORIG.sh  makechainsmall.sh  orderchain.sh
src/: filesplitter.C  filestripper.C  filestripperNEW.C  filestripperORIG.C  makechainsmall.C  orderchain.C
